// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ReportFilter component - Editions should render initial state when a selectedEdition has been removed 1`] = `
<div>
   
  <section
    class="svelte-13hqdzo"
  >
    <div
      class="report-filter svelte-13hqdzo"
    >
      <div
        class="filter-selector svelte-13hqdzo"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper  svelte-13hqdzo"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          No filters applied
        </div>
      </div>
       
      <div
        class="filter-chips svelte-13hqdzo"
      />
    </div>
     
  </section>
</div>
`;

exports[`ReportFilter component - Editions should render the ReportFilter component with a selectedEdition 1`] = `
<div>
   
  <section
    class="svelte-13hqdzo"
  >
    <div
      class="report-filter svelte-13hqdzo"
    >
      <div
        class="filter-selector svelte-13hqdzo"
        data-testid="display-modal-button"
      >
        <div
          class="icon-wrapper active  svelte-13hqdzo"
        >
          <div
            class=" svelte-zpbvvv"
            style="--icon-width: 20px; --icon-height: 20px;"
          >
            <object
              src="ic-filter.svg/"
            />
          </div>
        </div>
         
        <div>
          Edition
        </div>
      </div>
       
      <div
        class="filter-chips svelte-13hqdzo"
      >
        <div
          class=" clickable removeable svelte-dfh104"
          data-testid="chip"
        >
          <span
            class="label svelte-dfh104"
          >
            Test Event / Test Edition
          </span>
           
          <span
            class="cross svelte-dfh104"
            data-testid="remove-chip-button"
          >
            <div
              class=" svelte-zpbvvv"
              style="--icon-width: 12px; --icon-height: 12px;"
            >
              <object
                src="ic-delete.svg/"
              />
            </div>
          </span>
        </div>
      </div>
    </div>
     
  </section>
</div>
`;
